Project

General

Profile

Bug #41416

"ctest -R check-generated.sh" fails because of RGWObjManifest

Added by Kefu Chai over 4 years ago. Updated over 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

103:    ceph-dencoder type RGWObjManifest select_test 1 dump_json > /tmp/typ-5J0A4CXhV
103:    ceph-dencoder type RGWObjManifest select_test 1 encode decode dump_json > /tmp/typ-fpFoAihMy
103:    278c278
103: <                     "name": "",
103: ---
103: >                     "name": "0",
103: 280c280
103: <                     "ns": "" 
103: ---
103: >                     "ns": "shadow" 
103: 294c294
103: <         "ofs": 0,
103: ---
103: >         "ofs": 5242880,
103: 314c314
103: <                     "name": "",
103: ---
103: >                     "name": "0",
103: 316c316
103: <                     "ns": "" 
103: ---
103: >                     "ns": "shadow" 
$ bin/ceph-dencoder type RGWObjManifest select_test 2 dump_json
{
    "objs": [],
    "obj_size": 0,
    "explicit_objs": "false",
    "head_size": 0,
    "max_head_size": 0,
    "prefix": "",
    "rules": [],
    "tail_instance": "",
    "tail_placement": {
        "bucket": {
            "name": "",
            "marker": "",
            "bucket_id": "",
            "tenant": "",
            "explicit_placement": {
                "data_pool": "",
                "data_extra_pool": "",
                "index_pool": "" 
            }
        },
        "placement_rule": "" 
    },
    "begin_iter": {
        "part_ofs": 0,
        "stripe_ofs": 0,
        "ofs": 0,
        "stripe_size": 0,
        "cur_part_id": 0,
        "cur_stripe": 0,
        "cur_override_prefix": "",
        "location": {
            "placement_rule": "",
            "obj": {
                "bucket": {
                    "name": "",
                    "marker": "",
                    "bucket_id": "",
                    "tenant": "",
                    "explicit_placement": {
                        "data_pool": "",
                        "data_extra_pool": "",
                        "index_pool": "" 
                    }
                },
                "key": {
                    "name": "",
                    "instance": "",
                    "ns": "" 
                }
            },
            "raw_obj": {
                "pool": "",
                "oid": "",
                "loc": "" 
            },
            "is_raw": false
        }
    },
    "end_iter": {
        "part_ofs": 0,
        "stripe_ofs": 0,
        "ofs": 0,
        "stripe_size": 0,
        "cur_part_id": 0,
        "cur_stripe": 0,
        "cur_override_prefix": "",
        "location": {
            "placement_rule": "",
            "obj": {
                "bucket": {
                    "name": "",
                    "marker": "",
                    "bucket_id": "",
                    "tenant": "",
                    "explicit_placement": {
                        "data_pool": "",
                        "data_extra_pool": "",
                        "index_pool": "" 
                    }
                },
                "key": {
                    "name": "",
                    "instance": "",
                    "ns": "" 
                }
            },
            "raw_obj": {
                "pool": "",
                "oid": "",
                "loc": "" 
            },
            "is_raw": false
        }
    }
}
$ bin/ceph-dencoder type RGWObjManifest select_test 2 copy_ctor dump_json
{
    "objs": [],
    "obj_size": 0,
    "explicit_objs": "false",
    "head_size": 0,
    "max_head_size": 0,
    "prefix": "",
    "rules": [],
    "tail_instance": "",
    "tail_placement": {
        "bucket": {
            "name": "",
            "marker": "",
            "bucket_id": "",
            "tenant": "",
            "explicit_placement": {
                "data_pool": "",
                "data_extra_pool": "",
                "index_pool": "" 
            }
        },
        "placement_rule": "" 
    },
    "begin_iter": {
        "part_ofs": 0,
        "stripe_ofs": 0,
        "ofs": 0,
        "stripe_size": 0,
        "cur_part_id": 0,
        "cur_stripe": 0,
        "cur_override_prefix": "",
        "location": {
            "placement_rule": "",
            "obj": {
                "bucket": {
                    "name": "",
                    "marker": "",
                    "bucket_id": "",
                    "tenant": "",
                    "explicit_placement": {
                        "data_pool": "",
                        "data_extra_pool": "",
                        "index_pool": "" 
                    }
                },
                "key": {
                    "name": "0",
                    "instance": "",
                    "ns": "shadow" 
                }
            },
            "raw_obj": {
                "pool": "",
                "oid": "",
                "loc": "" 
            },
            "is_raw": false
        }
    },
    "end_iter": {
        "part_ofs": 0,
        "stripe_ofs": 0,
        "ofs": 0,
        "stripe_size": 0,
        "cur_part_id": 0,
        "cur_stripe": 0,
        "cur_override_prefix": "",
        "location": {
            "placement_rule": "",
            "obj": {
                "bucket": {
                    "name": "",
                    "marker": "",
                    "bucket_id": "",
                    "tenant": "",
                    "explicit_placement": {
                        "data_pool": "",
                        "data_extra_pool": "",
                        "index_pool": "" 
                    }
                },
                "key": {
                    "name": "0",
                    "instance": "",
                    "ns": "shadow" 
                }
            },
            "raw_obj": {
                "pool": "",
                "oid": "",
                "loc": "" 
            },
            "is_raw": false
        }
    }
}

my gut feeling is that `RGWObjManifest::obj_iterator::update_location()` sets the begin and end iterator to the implicit_location. but the

History

#1 Updated by Kefu Chai over 4 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 29862

#2 Updated by Kefu Chai over 4 years ago

  • Status changed from Fix Under Review to Resolved

Also available in: Atom PDF